commit on test-BY

--- a/themes/portio/assets/scss/_variables.scss
+++ b/themes/portio/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
 //site color variables
 $body-color: #fff;
-$primary-color: #5D78FF;
-$secondary-color: #282F49;
+$primary-color: #0dd398;
+$secondary-color: #646464;
 $text-color: #9D9EA5;
-$text-color-dark: #00113E;
+$text-color-dark: #646464;
 $site-ease: cubic-bezier(0.36, 0.03, 0, 0.91);
 $gray: #F7F9FF;
 $dark-gray: #646569;
@@ -13,5 +13,5 @@ $white: #fff;
 $black: #000;
 
 // Font Variables
-$primary-font: 'Yeseva One', cursive;
+$primary-font: 'Avenir', cursive;
 $secondary-font: 'Poppins', sans-serif;
