--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -31,7 +31,7 @@
       <div class="row contact__widget">
           <div class="col-lg-4">
               <div class="contact__widget_logo">
-                  <img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo">
+                  <img src="{{ .Site.Params.footerLogo | absURL }}" alt="logo-white">
               </div>
           </div>
           <div class="col-lg-4">
