--- a/themes/portio/layouts/partials/header.html
+++ b/themes/portio/layouts/partials/header.html
@@ -19,7 +19,7 @@
               {{ end }}
           </ul>
           <div class="navbar-nav">
-              <a href="{{ "contact" | absURL }}" class="hire_button">Hire Me Now</a>
+              <a href="{{ "contact" | absURL }}" class="hire_button">App Download</a>
           </div>
       </div>
   </div>
