--- a/themes/portio/assets/scss/components/_site-navigation.scss
+++ b/themes/portio/assets/scss/components/_site-navigation.scss
@@ -43,10 +43,10 @@
     
     .hire_button{
         background: $primary_color;
-        padding: 15px 30px;
+        padding: 8px 15px;
         color: #fff;
         text-decoration: none;
-        border-radius: 7px;
+        border-radius: 50px;
         font-size: 16px;
         font-family: $secondary-font;
         font-weight: 400;
@@ -54,8 +54,8 @@
         transition: all .3s ease;
         transform: scale(1);
         &:hover{
-            background: #425FEE;
-            box-shadow: 0 8px 20px rgba(56, 87, 241, 0.3);
+            background: #00c694;
+            // box-shadow: 0 8px 20px rgba(135, 135, 135, 0.3);
             transform: scale(1.03);
         }
         @include desktop{
@@ -65,7 +65,7 @@
     
     &.nav__color__change{
         background: $white;
-        padding: 20px 0;
+        padding: 15px 0;
         box-shadow: 0px 10px 20px 0px rgba(50,65,141,0.1);
         @include desktop{
             padding: 15px 20px;
