--- a/themes/portio/layouts/partials/hero.html
+++ b/themes/portio/layouts/partials/hero.html
@@ -4,7 +4,7 @@
       <div class="hero_background-svg">
         <svg viewBox="0 0 1437 1180">
           <path
-            fill="#f1f6f9"
+            fill="#f1f6f9" fill-opacity="0.5"
             d="M0 0h1377l60 1010a120 120 0 01-120 120L0 1180z"
             data-name="Path 1350"
           />
@@ -28,8 +28,8 @@
                       y2=".858"
                       gradientUnits="objectBoundingBox"
                     >
-                      <stop offset="0" stop-color="#fff" />
-                      <stop offset="1" stop-color="#fff" stop-opacity=".012" />
+                      <stop offset="0" stop-color="#caffe6" stop-opacity=".5"/>
+                      <stop offset="1" stop-color="#6dffe9" stop-opacity=".012" />
                     </linearGradient>
                   </defs>
                   <g data-name="blob-shape (3)">
@@ -44,9 +44,9 @@
               <span>{{ .title }}</span>
               <h1>{{ .subtitle }}</h1>
               <p>
-                {{ .description }}
+                {{ .description }}<br>{{ .descriptionsub}}
               </p>
-              <a href="{{ .buttonURL | absURL }}">{{ .buttonName }}</a>
+              <a href="{{ $.Site.BaseURL }}{{ "#about" }}" class="{{ if $.IsHome }}scroll{{ end }}">Learn more</a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -64,7 +64,7 @@
                   -webkit-mask-position: center center;
                 '
               />
-              <div class="hero_figure-popup">
+              {{/*  <div class="hero_figure-popup">
                 <div class="thumb">
                   <img src="{{ .videoThumb }}" alt="popup" />
                 </div>
@@ -86,7 +86,7 @@
                     />
                   </svg>
                 </a>
-              </div>
+              </div>  */}}
             </div>
           </div>
         </div>
