--- a/themes/portio/layouts/index.html
+++ b/themes/portio/layouts/index.html
@@ -14,6 +14,8 @@
 
 {{ partial "testimonialSection.html" . }}
 
+{{ partial "partnerSection.html" . }}
+
 {{ partial "blogSection.html" . }}
 
 {{ end }}
