--- a/themes/portio/layouts/partials/partnerSection.html
+++ b/themes/portio/layouts/partials/partnerSection.html
@@ -15,5 +15,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="partner-logo">
+                            {{ $section := .dbs }}
+                            {{ range $section }}
+                            <div class="dbs">
+                                <a></a>
+                                <img src="{{ .images | absURL}}" alt="dbs-img">
+                                </a>
+                            </div>
+                            {{ end }}
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+    {{ end }}
+{{ end }}
