commit on test-BY

--- a/themes/portio/assets/scss/style.scss
+++ b/themes/portio/assets/scss/style.scss
@@ -33,6 +33,8 @@ VERSION:	1.0.0
 
 @import "components/testimonial-section";
 
+@import "components/partnerSection.scss";
+
 @import "components/blog-section";
 
 @import "components/contact-section";
