commit on test-BY

--- a/themes/portio/assets/scss/_variables.scss
+++ b/themes/portio/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 //site color variables
 $body-color: #fff;
-$primary-color: #0dd398;
+$primary-color: #2fc29d;
 $secondary-color: #646464;
 $text-color: #9D9EA5;
 $text-color-dark: #646464;
@@ -15,3 +15,6 @@ $black: #000;
 // Font Variables
 $primary-font: 'Avenir', cursive;
 $secondary-font: 'Poppins', sans-serif;
+
+//background pattern variables
+$light-green: #eefdf9;
