--- a/themes/portio/assets/scss/components/_brand-section.scss
+++ b/themes/portio/assets/scss/components/_brand-section.scss
@@ -1,28 +1,6 @@
 .about {
   overflow: hidden;
-  &_header {
-    margin-bottom: 60px;
-    span {
-      display: block;
-      font-size: 20px;
-      font-family: $secondary-font;
-      margin: 0 0 30px 0;
-    }
-    h1 {
-      margin: 0 0 20px 0;
-      font-size: 55px;
-      font-family: $primary-font;
-      color: $secondary-color;
-      line-height: 1;
-    }
-    p {
-      margin: 0;
-      font-size: 18px;
-      font-family: $secondary-font;
-      color: #7e7e8a;
-      line-height: 30px;
-    }
-  }
+  background: #2fc29d;
   &_content {
     display: flex;
     align-items: center;
@@ -46,29 +24,24 @@
           left: -16%;
         }
         img {
-          height: 100%;
-          width: 100%;
+          max-width: 100%;
+          height: auto;
         }
       }
       .about_content-thumb-image {
+        text-align: center;
         img {
-          height: 100%;
-          width: 100%;
-          &.about_mask_svg {
-            mask: url(../images/about/about-mask-svg.svg);
-            -webkit-mask-repeat: no-repeat;
-            -webkit-mask-size: contain;
-            -webkit-mask-position: center center;
-          }
+          height: auto;
+          max-width: 60%;
         }
       }
     }
     &-inner {
       width: 55%;
       padding: 60px 50px;
-      background: #1b2031;
+      // background: $primary-color;
       border-radius: 20px;
-      margin-left: -60px;
+      // margin-left: -60px;
       position: relative;
       @include desktop {
         padding: 25px;
@@ -96,10 +69,14 @@
         margin: 0 0 35px 0;
         color: $white;
         font-family: $primary-font;
+        font-size: 45px;
+        @include tablet {
+          text-align: center;
+        }
       }
       p {
         margin: 0 0 35px 0;
-        font-size: 15px;
+        font-size: 18px;
         font-family: $secondary-font;
         color: $white;
         font-weight: 400;
@@ -108,30 +85,36 @@
           font-size: 14px;
           line-height: 26px;
         }
+        @include tablet {
+          text-align: center;
+        }
       }
       ul {
         margin: 0;
         padding: 0;
+        @include tablet {
+          text-align: center;
+        }
         li {
           list-style: none;
           display: inline-block;
           a {
             display: block;
-            padding: 15px 30px;
+            padding: 10px 25px;
             text-decoration: none;
-            color: $white;
-            border-radius: 7px;
+            color: $black;
+            border-radius: 50px;
             transition: all 0.3s ease;
             border: 1px solid #60636f;
             background: transparent;
             &.active {
-              background-color: $primary-color;
+              background-color: $white;
               border: 1px solid transparent;
             }
             &:hover {
-              border: 1px solid #425fee;
-              background: #425fee;
-              box-shadow: 0 8px 20px rgba(56, 87, 241, 0.3);
+              border: 1px solid $white;
+              background: #2fc29d;
+              color: $white;
               transform: scale(1.03);
             }
           }
