--- a/themes/portio/layouts/index.html
+++ b/themes/portio/layouts/index.html
@@ -1,21 +1,25 @@
 {{ define "main" }}
 
+<!-- {{ partial "preloader.html" . }} -->
+
+<!-- {{ partial "bannerSection.html" . }} -->
+
 {{ partial "hero.html" . }}
 
-{{ partial "aboutSection.html" . }}
+{{ partial "brandSection.html" . }}
 
 {{ partial "serviceSection.html" . }}
 
-{{ partial "caseStudySection.html" . }}
+<!-- {{ partial "caseStudySection.html" . }} -->
 
 {{ partial "resumeSection.html" . }}
 
-{{ partial "skillSection.html" . }}
+<!-- {{ partial "skillSection.html" . }} -->
 
-{{ partial "testimonialSection.html" . }}
-
-{{ partial "partnerSection.html" . }}
+<!-- {{ partial "testimonialSection.html" . }} -->
 
 {{ partial "blogSection.html" . }}
+
+{{ partial "partnerSection.html" . }}
 
 {{ end }}
