--- a/themes/portio/layouts/partials/hero.html
+++ b/themes/portio/layouts/partials/hero.html
@@ -2,9 +2,9 @@
   {{ if .enable }}
     <section class="hero" id="home">
       <div class="hero_background-svg">
-        <svg viewBox="0 0 1437 1180">
+        <svg viewBox="0 0 1437 1133">
           <path
-            fill="#f1f6f9" fill-opacity="0.5"
+            fill="#eefdf9" fill-opacity="0.5"
             d="M0 0h1377l60 1010a120 120 0 01-120 120L0 1180z"
             data-name="Path 1350"
           />
@@ -28,8 +28,8 @@
                       y2=".858"
                       gradientUnits="objectBoundingBox"
                     >
-                      <stop offset="0" stop-color="#caffe6" stop-opacity=".5"/>
-                      <stop offset="1" stop-color="#6dffe9" stop-opacity=".012" />
+                      <stop offset="0" stop-color="#2fc29d" stop-opacity=".2"/>
+                      <stop offset="1" stop-color="#31d3ab" stop-opacity=".012" />
                     </linearGradient>
                   </defs>
                   <g data-name="blob-shape (3)">
