--- a/themes/portio/assets/scss/components/_resume-section.scss
+++ b/themes/portio/assets/scss/components/_resume-section.scss
@@ -7,7 +7,7 @@
         padding: 100px 0;
     }
     &__background{
-        background: #1B2031;
+        background: #2fc29d;
         height: 100%;
         width: 100%;
         position: absolute;
