--- a/themes/portio/assets/scss/components/partnerSection.scss
+++ b/themes/portio/assets/scss/components/partnerSection.scss
@@ -1,29 +1,10 @@
 .partner {
-  background: #f1f6f9;
+  background: #fff;
   position: relative;
   padding: 170px 0 150px 0;
 
   @include desktop {
     padding: 100px 0;
-  }
-  &__background_shape {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 0;
-
-    svg {
-      height: 100%;
-      width: 100%;
-
-      path {
-        fill: $white;
-      }
-    }
-
-    @include mobile-xs {
-      display: none;
-    }
   }
   &__header {
     margin-bottom: 50px;
