--- a/themes/portio/layouts/_default/baseof.html
+++ b/themes/portio/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html>
   {{ partial "head.html" . }}
   <body>
+    <!-- {{ partial "preloader.html" . }}  -->
     {{ partial "header.html" . }}
     <div id="content">
       {{ block "main" . }}{{ end }}
