--- a/themes/portio/layouts/partials/brandSection.html
+++ b/themes/portio/layouts/partials/brandSection.html
@@ -1,16 +1,7 @@
-{{ with .Site.Data.aboutSection }}
+{{ with .Site.Data.brandSection }}
     {{ if .enable }}
         <section class="section about" id="about">
             <div class="container">
-                <div class="row text-center">
-                    <div class="col-lg-6 offset-lg-3">
-                        <div class="about_header">
-                            <span>About</span>
-                            <h1> {{ .title }} </h1>
-                            <p> {{ .subtitle }} </p>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="about_content">
@@ -19,7 +10,7 @@
                                     <img src="images/hero/figure-svg.svg" alt="figure-svg">
                                 </div>
                                 <div class="about_content-thumb-image">
-                                    <img src="{{ .image | absURL }}" alt="about-img" style='-webkit-mask: url({{"images/about/about-mask-svg.svg" | absURL}}); -webkit-mask-size: contain;'>
+                                    <img src="{{ .image | absURL }}" alt="app-img" class="img-fluid">
                                 </div>
                             </div>
                             <div class="about_content-inner">
@@ -36,11 +27,10 @@
                                         </g>
                                     </svg>
                                 </div>
-                                <h3>{{ .title2 }}</h3>
+                                <h3>{{ .title }}</h3>
                                 <p>{{ .content }}</p>
                                 <ul>
                                     <li><a class="active" href="{{ .button1Target | absURL }}">{{ .button1Name }}</a></li>
-                                    <li><a href="{{ .button2Target | absURL }}"> {{ .button2Name }} </a></li>
                                 </ul>
                             </div>
                         </div>
