commit on test-BY

--- a/themes/portio/layouts/partials/serviceSection.html
+++ b/themes/portio/layouts/partials/serviceSection.html
@@ -3,15 +3,19 @@
         <section class="section service" id="service">
             <div class="service__background">
                 <svg viewBox="0 0 1283 1126">
-                    <path fill="#f1f6f9" d="M100 0h1183v1126l-1183-80A100 100 0 010 946V100A100 100 0 01100 0z" data-name="Path 1369"/>
+                    <path 
+                        fill="#eefdf9" fill-opacity="0.5"
+                        d="M100 0h1183v1126l-1183-80A100 100 0 010 946V100A100 100 0 01100 0z" 
+                        data-name="Path 1369" 
+                    />
                 </svg>
             </div>
             <div class="service__background_shape">
                 <svg viewBox="0 0 550 550">
                     <defs>
                         <linearGradient id="b" x1="0.209" y1="0.085" x2="1.071" y2="1.164" gradientUnits="objectBoundingBox">
-                            <stop offset="0" stop-color="#f1f6f9"/>
-                            <stop offset="1" stop-color="#f1f6f9" stop-opacity="0"/>
+                            <stop offset="0" stop-color="#2fc29d" stop-opacity="0.2"/>
+                            <stop offset="1" stop-color="#31d3ab" stop-opacity="0.012"/>
                         </linearGradient>
                     </defs>
                     <g data-name="blob-shape (3)">
