--- a/themes/portio/assets/scss/components/_resume-section.scss
+++ b/themes/portio/assets/scss/components/_resume-section.scss
@@ -78,16 +78,17 @@
                         padding: 15px 28px;
                     }
                     &:hover{
-                        background: #425FEE;
+                        background: #2fc29d;
                         color: $white;
-                        box-shadow: 0 8px 20px 0 rgba(56, 87, 241, 0.30);
+                        box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.30);
+
                     }
                     &.active{
                         background: $primary-color;
                         color: $white;
-                        box-shadow: 0 8px 20px 0 rgba(56, 87, 241, 0.30);
+                        box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.30);
                         &:hover{
-                            background: #425FEE;
+                            background: #2fc29d;
                         }
                     }
                 }
