--- a/themes/portio/layouts/_default/baseof.html
+++ b/themes/portio/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ with site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
   {{ partial "head.html" . }}
   <body>
     <!-- {{ partial "preloader.html" . }}  -->
